--- a/plugin/tigergraph/fuzzymatch/Makefile
+++ b/plugin/tigergraph/fuzzymatch/Makefile
@@ -38,12 +38,11 @@ STAGE_COPY_FILES = \
 	$(EXAMPLE_DIR)/README.md \
     $(EXAMPLE_DIR)/bin/common.sh \
     $(EXAMPLE_DIR)/bin/set-plugin-vars.sh \
-    $(EXAMPLE_DIR)/udf/louvainDemo.hpp \
-    $(EXAMPLE_DIR)/udf/louvainDemoImpl.hpp \
+    $(EXAMPLE_DIR)/udf/fuzzyMatchDemo.hpp \
+    $(EXAMPLE_DIR)/udf/fuzzyMatchDemoImpl.hpp \
 	$(EXAMPLE_DIR)/query/base.gsql \
     $(EXAMPLE_DIR)/query/load.gsql \
-    $(EXAMPLE_DIR)/query/louvain_alveo.gsql \
-    $(EXAMPLE_DIR)/query/louvain_distributed_q_cpu.gsql \
+    $(EXAMPLE_DIR)/query/fuzzy_match.gsql \
     $(EXAMPLE_DIR)/query/schema.gsql \
     \
     $(EXAMPLE_DIR)/bin/run.sh \
