--- a/L2/louvainmod_pruning_kernel/conn_u50_u55c_u280.ini
+++ b/L2/louvainmod_pruning_kernel/conn_u50_u55c_u280.ini
@@ -18,3 +18,4 @@ sp=kernel_louvain.m_axi_gmem15:HBM[28:29]
 sp=kernel_louvain.m_axi_gmem16:HBM[7]
 sp=kernel_louvain.m_axi_gmem17:HBM[9]
 #slr=kernel_louvain:SLR0
+nk=kernel_louvain:1:kernel_louvain
