udf_fuzzymatch_cpu working

--- a/plugin/tigergraph/fuzzymatch/examples/swiftaml/Makefile
+++ b/plugin/tigergraph/fuzzymatch/examples/swiftaml/Makefile
@@ -14,7 +14,8 @@
 # limitations under the License.
 
 deviceNames=xilinx_u50_gen3x16_xdma_201920_3
-personSource=$(CURDIR)/data/people1k.csv
+blacklist=$(CURDIR)/data/people1k.csv
+blacklist_abs=$(abspath $(blacklist))
 graphName=swift_$(USER)
 
 compileMode=1
@@ -69,7 +70,7 @@ run: .install-udf-done
 	@echo "-------------------------------------------------------"
 	cd ../../ && make DEBUG=$(DEBUG) stage && \
 	    ./staging/examples/$(EXAMPLE)/bin/run.sh -v \
-	    -g $(graphName) -s $(personSource) \
+	    -g $(graphName) -b $(blacklist_abs) \
 		-c $(compileMode) -r $(runMode) 
 
 help:
@@ -84,7 +85,7 @@ help:
 	@echo "Parameter descriptions:"
 	@echo "deviceNames       : Target device name. Supported devices: "
 	@echo "                    xilinx_u50_gen3x16_xdma_201920_3"
-	@echo "personSource      : A csv file with person records. default=../data/people1k.csv"
+	@echo "blacklist         : A csv file with people on the blacklist. default=../data/people1k.csv"
 	@echo "txSource          : A csv file with transactions records. default=../data/txdata.csv"
 	@echo "graphName         : graph name (default=social_<username>"
 	@echo "compileMode       : 0: skip database creation and gsql compilation"
