[bfs method low bandwidth] partition with L3

--- a/louvainmod/Makefile
+++ b/louvainmod/Makefile
@@ -68,8 +68,8 @@ CPP_BUILD_DIR = Debug
 CXXFLAGS += -O0 -g
 else
 CPP_BUILD_DIR = Release
-CXXFLAGS += -O3 -DNDEBUG
-#CXXFLAGS += -O3 -g
+#CXXFLAGS += -O3 -DNDEBUG
+CXXFLAGS += -O0 -g 
 endif
 
 USE_U55C = 0
