--- a/plugin/tigergraph/fuzzymatch/examples/swiftaml/Makefile
+++ b/plugin/tigergraph/fuzzymatch/examples/swiftaml/Makefile
@@ -103,4 +103,5 @@ help:
 
 clean:
 	cd ../../../../../$(STANDALONE_NAME) && make clean
+	cd ../../ && make clean
 	rm -f .install-plugin-done .install-udf-done .install-query-done
